# ssp

./: .editorconfig  .gitignore  Makefile  README.md
backend/: debug_imports.py  main.py  pyproject.toml
frontend/: .gitignore  README.md  package.json
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/[viewId]/: page.js
frontend/src/app/api/views/: route.js
frontend/src/components/: AppShell.jsx  ContentViewer.jsx  CoverageBar.jsx  Editor.jsx  LeftRail.jsx  PDFViewer.jsx  TopBar.jsx
frontend/src/config/: artifacts.js
frontend/src/context/: DocumentContext.jsx  ThemeContext.jsx
frontend/src/extensions/: DynamicPlaceholderPlugin.js
frontend/src/utils/: coverage.js  storage.js
src/app/: layout.js
src/app/[viewId]/: page.js
src/app/api/views/: route.js
src/components/: AppShell.jsx  TopBar.jsx
src/config/: artifacts.js
src/context/: DocumentContext.jsx
